8244975: [lworld] Investigate if VM can implement Object::hashCode by calling ValueBootstrapMethods for inline types